CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
PROJECT(tbs_tester LANGUAGES C CXX)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_STANDARD 20)
message(STATUS "tbs tester build")

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/runtime)


IF (WIN32)
    MESSAGE(STATUS "WINDOWS PLATFORM")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
    set(CMAKE_INSTALL_PREFIX "C:/msys64/mingw64")
ELSEIF (APPLE)
    MESSAGE(STATUS "APPLE PLATFORM")
    set(CMAKE_INSTALL_PREFIX "/opt/homebrew/")

    SET(CMAKE_OSX_SYSROOT /Library/Developer/CommandLineTools/SDKs/MacOSX12.1.sdk)
ENDIF ()
SET(HEADER_PATH ${CMAKE_INSTALL_PREFIX}/include)
SET(LIB_PATH ${CMAKE_INSTALL_PREFIX}/lib)
INCLUDE_DIRECTORIES(BEFORE ${HEADER_PATH})
LINK_DIRECTORIES(BEFORE ${LIB_PATH})
FILE(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/**.cpp)
ADD_EXECUTABLE(tbs_tester ${HEADER_PATH} ${SOURCES})
TARGET_LINK_LIBRARIES(tbs_tester PUBLIC tbs_tool_lib tbs_log tbs_tool_concurrency)
#add_dependencies(tbs_tester tbs_tool_lib)
